--- a/modules/miniassay/resources/assay/simple/views/run.html
+++ b/modules/miniassay/resources/assay/simple/views/run.html
@@ -26,8 +26,8 @@
       s += "</tr>";
 
       s += "<tr>";
-      s += "<td class='labkey-form-label'>Sample Set</td>";
-      s += "<td>" + (material.sampleSet ?  "<a href='" + _url('experiment', 'showMaterialSource', c, {rowId: material.sampleSet.id}) + "'>" + material.sampleSet.name + "</a>" : "(Not a member of a sample set)") + "</td>"; s += "</tr>";
+      s += "<td class='labkey-form-label'>Sample Type</td>";
+      s += "<td>" + (material.sampleSet ?  "<a href='" + _url('experiment', 'showSampleType', c, {rowId: material.sampleSet.id}) + "'>" + material.sampleSet.name + "</a>" : "(Not a member of a sample type)") + "</td>"; s += "</tr>";
 
     }
 
