--- a/modules/miniassay/resources/assay/simple/views/batch.html
+++ b/modules/miniassay/resources/assay/simple/views/batch.html
@@ -1,7 +1,7 @@
 
 <div id="mydiv"></div>
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
   var s = "<table>";
   for (var i = 0; i < LABKEY.page.batch.runs.length; i++)
   {
