--- a/modules/miniassay/resources/assay/simple/views/result.html
+++ b/modules/miniassay/resources/assay/simple/views/result.html
@@ -17,7 +17,7 @@
   </tr>
 </table>
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
   function setValue(row, property)
   {
     var div = Ext.get(property + "_div");
