--- a/modules/miniassay/resources/assay/simple/views/run.html
+++ b/modules/miniassay/resources/assay/simple/views/run.html
@@ -1,7 +1,7 @@
 
 <div id="mydiv"></div>
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
   var _url = LABKEY.ActionURL.buildURL;
   var c = LABKEY.container.path;
 
