--- a/modules/miniassay/resources/assay/simple/views/upload.html
+++ b/modules/miniassay/resources/assay/simple/views/upload.html
@@ -55,11 +55,11 @@
 <br/>
 <div id='runs_div'></div>
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
   LABKEY.requiresScript("FileUploadField.js");
   document.getElementById("X-LABKEY-CSRF").value = LABKEY.CSRF;
 </script>
-<script type="text/javascript">
+<script type="text/javascript" nonce="<%=getScriptNonce()%>">
 function setDirty(dirty) {
   LABKEY.setDirty(dirty);
   var save_btns = Ext.DomQuery.select("a:has(span:contains(Save))");
